# zarr_benchmarking

./: .gitignore  README.md  dataloader_benchmark.py  pyproject.toml  run_benchmark.sh  run_compression_benchmark.sh  run_compression_build.sh  run_data_generator.sh  run_dataloader_benchmark.sh  storage_comparision_script.py  zarr_benchmark_script.py  zarr_compression_benchmark.py  zarrv3_mmap_generator.py
genome_zarr/: __init__.py  cli.py  codec.py  convert.py
tests/: test_convert.py
